testsuite/vhdl/syntax/test_data/label_mismatch/003_process.expected
In 'label_mismatch/003_process':11:3: syntax error: Label mismatch in Process Statement
  11|   Stimulus: process
    |   ~~~~~~~~ <<-- here
    | ...
  18| end process Stim; -- Stimulus vs. Stim
    |             ~~~~ <<-- and here
